<resources>
    <string name="app_name">Planet Express Chauffeur</string>
    <string name="pas_de_compte_inscris_toi"><u>Pas de compte ? Inscris-toi !</u></string>
    <string name="valider">Valider</string>
    <string name="annuler">Annuler</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- String pour la gestion l'API Maps -->
    <string name="maps_api_key">AIzaSyDeYGka7-Ec9fmkYqv10wjJFtATfVKD5nw</string>

    <!-- String pour le spinner -->
    <string-array name="spinner_list">
        <item>Berlines</item>
        <item>Break</item>
        <item>Monospace</item>
        <item>Citadines</item>
        <item>Cabriolet</item>
        <item>Coupé</item>
        <item>Pick-Up</item>
        <item>4 x 4</item>
        <item>Crossover</item>
    </string-array>

    <!-- String personnalisés pour le projet Planet Express -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inscription">Inscription</string>
    <string name="informations_personnelles">Informations personnelles</string>
    <string name="nom">Nom</string>
    <string name="pr_nom">Prénom</string>
    <string name="identifiant">Identifiant</string>
    <string name="date_de_naissance">Date de naissance</string>
    <string name="veuillez_saisir_un_mot_de_passe">Veuillez saisir un mot de passe</string>
    <string name="confirmer_le_mot_de_passe">Confirmer le mot de passe</string>
    <string name="bienvenue">Bienvenue</string>
    <string name="navigation_drawer_open">navigation_drawer_open </string>
    <string name="navigation_drawer_close">navigation_drawer_close </string>
    <string name="connexion">Connexion</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="mon_profil">Mon profil</string>
    <string name="mon_v_hicule">Mon véhicule</string>
    <string name="mes_trajets">Mes trajets</string>
    <string name="mes_colis">Mes colis</string>
    <string name="mon_historique">Mon historique</string>
    <string name="param_tres">Paramètres</string>
    <string name="d_connexion">Déconnexion</string>
    <string name="livr_s">Livrés</string>
    <string name="a_transporter">A transporter</string>
    <string name="a_venir">A venir</string>
    <string name="termin_s">Terminés</string>
    <string name="tous">Tous</string>
    <string name="aucun_v_hicule_renseign">Aucun véhicule renseigné !</string>
    <string name="adresse_mail">Adresse mail</string>
    <string name="d_part">Départ</string>
    <string name="arriv_e">Arrivée</string>

</resources>