<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink_light_2"
    tools:context=".Fragments.ProfilFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="59dp"
        android:layout_marginLeft="98dp"
        android:src="@drawable/ic_profil"
        app:tint="@color/red_dark" />

    <TextView
        android:id="@+id/frag_profil_titre"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/mon_profil"
        android:textColor="@color/red_dark"
        android:textSize="30dp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/pink_light">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:gravity="left"
            android:text="@string/nom"
            android:textColor="@color/red_dark"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/frag_profil_nom"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="170dp"
            android:layout_marginRight="10dp"
            android:gravity="left"
            android:text="ROUMIER"
            android:textColor="@color/red_dark"
            android:textSize="20dp" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="left"
            android:text="@string/pr_nom"
            android:textColor="@color/red_dark"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/frag_profil_prenom"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="170dp"
            android:layout_marginRight="10dp"
            android:gravity="left"
            android:text="Camille"
            android:textColor="@color/red_dark"
            android:textSize="20dp" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="left"
            android:text="@string/adresse_mail"
            android:textColor="@color/red_dark"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/frag_profil_id"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:layout_marginLeft="170dp"
            android:layout_marginRight="10dp"
            android:gravity="left"
            android:text="Super conductrice!"
            android:textColor="@color/red_dark"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="left"
            android:text="@string/date_de_naissance"
            android:textColor="@color/red_dark"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/frag_profil_date"
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:layout_marginTop="130dp"
            android:layout_marginLeft="170dp"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:text="23/09/1997"
            android:textColor="@color/red_dark"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/frag_profil_mdp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="190dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:gravity="left"
            android:text="@string/mot_de_passe"
            android:textColor="@color/red_dark"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="190dp"
            android:layout_marginLeft="170dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="left"
            android:text="@string/bienvenue"
            android:textColor="@color/red_dark"
            android:textSize="20dp"
            android:inputType="textPassword" />

    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/frag_profil_btn_float"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:src="@drawable/ic_edit"/>

</FrameLayout>