<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnBackground"
    tools:context=".Fragments.TrajetFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:gravity="center"
            android:textColor="?attr/colorPrimary"
            android:textSize="30dp"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="59dp"
            android:src="@drawable/ic_trajets"
            app:tint="?attr/colorPrimary" />

        <TextView
            android:id="@+id/frag_profil_titre"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="80dp"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/mes_trajets"
            android:textColor="?attr/colorPrimary"
            android:textSize="30dp"
            android:textStyle="bold" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/frame_trajet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

    </FrameLayout>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center">

        <RadioButton
            android:id="@+id/rb_prochain_trajet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/a_venir"
            android:textColor="?attr/colorPrimary"
            android:textStyle="bold"/>

        <RadioButton
            android:id="@+id/rb_tous_trajet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tous"
            android:textColor="?attr/colorPrimary"
            android:textStyle="bold"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="150dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:background="?attr/colorOnPrimary"
        android:gravity="center"
        android:orientation="vertical">

        <ListView
            android:id="@+id/lv_trajet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/frag_trajet_btn_float"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:src="@drawable/ic_ajout_trajet"/>

</FrameLayout>